--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,29 @@
 {
   "name": "mern-task-manager-backend",
   "version": "1.0.0",
+  "description": "Backend for MERN Task Manager with authentication and task APIs",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [
-    "Task manager",
-    "Tasks"
+    "MERN",
+    "Task Manager",
+    "Backend",
+    "Node",
+    "Express",
+    "MongoDB"
   ],
-  "author": "Aayush",
+  "author": "Rajyalakshmi Chennuboyina",
   "license": "ISC",
-  "description": "The backend part of simple task manager with user authentication",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.3",
-    "task-manager": "file:.."
+    "mongoose": "^6.2.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
